[package]
name = "rust-dependency-graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.11.0", features = ["full"] }
toml_edit = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
octocrab = "0.28"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0"
neo4rs = "0.6"
clap = { version = "4.3.21", features = ["derive"] }
