[package]
name = "rust-dependency-graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.9"
neo4rs = "0.6"
octocrab = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.3.1"
tokio = { version = "1.11.0", features = ["full"] }
reqwest = {version = "0.11", features = ["json"]}
tracing = { version = "0.1.39" }